CONV-2: Updated footer with "Le Tanuki" credit for design and fixed wrong padding.

--- a/sites/all/themes/montagnedejeux/css/layouts/responsive-sidebars.css
+++ b/sites/all/themes/montagnedejeux/css/layouts/responsive-sidebars.css
@@ -57,7 +57,7 @@
 }
 
 #footer {
-  padding: 222px 155px 0;
+  padding: 215px 155px 0;
   text-align: center;
 }
 
